[tool.poetry]
name = "watermark-remover"
version = "0.1.0"
description = "remove watermark using tensorflow"
authors = ["Jay Jiang <48189996+crankswagon@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.22.4"
keras = "^2.9.0"
opencv-python = "^4.5.5"
Pillow = "^9.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
